--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Site settings
-title: 博客名字 # 你的博客名字，可以定义修订
+title: lazydogez的博客 # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "这是我的博客"  # 一句话描述你的博客
+description: "这是lazydogez的博客"  # 一句话描述你的博客
 baseurl: ""
 url: "http://cnfeat"  # 此处填写你的博客地址 
 
 # About/contact
 owner: 
-  name: "作者名字" # 填写作者信息：名字
-  email: X@gmail.com # 填写作者信息：邮箱
+  name: "lazydogez" # 填写作者信息：名字
+  email: ustcyanzhe@gmail.com # 填写作者信息：邮箱
   bio: "你的博客描述" # 填写作者信息：博客描述
 
 # Data
-gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
-favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
+gavatar: Dogecoin_logo.jfif # 浏览器地址栏小图标，可自定义更改
+favicon: Dogecoin_logo.jfif # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
@@ -43,8 +43,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "你的名字" # 你的名字
-      header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
+      author: "lazydogez" # 你的名字
+      header-img: "img/azure_lane.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
