--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: lazydogez的博客 # 你的博客名字，可以定义修订
-header-img: "img/green.jpg"
+header-img: "img/azurelane.jpg"
 tagline: "cn"  
 description: "这是lazydogez的博客"  # 一句话描述你的博客
 baseurl: ""
@@ -13,8 +13,8 @@ owner:
   bio: "你的博客描述" # 填写作者信息：博客描述
 
 # Data
-gavatar: Dogecoin_logo.jfif # 浏览器地址栏小图标，可自定义更改
-favicon: Dogecoin_logo.jfif # 浏览器地址栏小图标，可自定义更改
+gavatar: doge.png # 浏览器地址栏小图标，可自定义更改
+favicon: doge.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
