--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ owner:
   bio: "你的博客描述" # 填写作者信息：博客描述
 
 # Data
-gavatar: doge # 浏览器地址栏小图标，可自定义更改
-favicon: doge # 浏览器地址栏小图标，可自定义更改
+gavatar: img/doge.png # 浏览器地址栏小图标，可自定义更改
+favicon: img/doge.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
@@ -44,7 +44,7 @@ defaults:
     values:
       layout: "post"
       author: "lazydogez" # 你的名字
-      header-img: "img/azure_lane.jpg" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/azurelane.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
