--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ owner:
 gavatar: img/doge.png # 浏览器地址栏小图标，可自定义更改
 favicon: img/doge.png # 浏览器地址栏小图标，可自定义更改
 
-douban_username:  # 你的豆瓣id
-twitter_username: 
-github_username: 
-facebook_username: 
-weibo_username: 
-zhihu_username: 
+# douban_username:  # 你的豆瓣id
+# twitter_username: 
+# github_username: 
+# facebook_username: 
+# weibo_username: 
+# zhihu_username: 
 
 # Build settings  
 # use Github Flavored Markdown !important  
