--- a/_config.yml
+++ b/_config.yml
@@ -47,12 +47,12 @@ defaults:
       header-img: "img/azurelane.png" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
-comments :
-  provider : disqus # 使用 disqus 评论模块，读者翻墙才能看见
-  #duoshuo :
+#comments :
+  # provider : disqus # 使用 disqus 评论模块，读者翻墙才能看见
+  # duoshuo :
    # short_name :  # 填写你的 disqus id
-  disqus :
-      short_name : 4693251  # 填写你的 disqus id
+  #disqus :
+      #short_name :   # 填写你的 disqus id
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: 288688712  # 填写你  google_analytics id
