--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ owner:
   bio: "老博士随便写写" # 填写作者信息：博客描述
 
 # Data
-gavatar: img/doge.png # 浏览器地址栏小图标，可自定义更改
-favicon: img/doge.png # 浏览器地址栏小图标，可自定义更改
+gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
+favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 # douban_username:  # 你的豆瓣id
 # twitter_username: 
